--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,29 +1,47 @@
-﻿name: Build
+name: Build
 
 on:
   push:
     branches:
-      - '**'
+      - "**"
   pull_request:
+  workflow_dispatch:
+    inputs:
+      ref:
+        description: "Git ref (branch, tag, or SHA) to build (optional)"
+        required: false
+        default: ""
+      node_version:
+        description: "Node.js version"
+        required: false
+        default: "20.4.x"
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
         with:
-          node-version: '20.4.x'
+          ref: ${{ github.event.inputs.ref != '' && github.event.inputs.ref || github.ref }}
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ github.event.inputs.node_version }}
+          cache: "yarn"
+
       - name: Install dependencies
         run: yarn --immutable
+
       - name: Build
         run: yarn build
         env:
           NODE_OPTIONS: --max_old_space_size=6000
+
       - name: Test
         run: yarn test
+
       - name: Lint
         run: yarn lint
+
       - name: Prettier
-        run: yarn prettier --check
+        run: yarn prettier --check .
