--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,49 +2,61 @@ name: Release
 
 on:
   push:
-    branches:
-      - windows-builds
+    branches: [ main ]
     tags:
       - app-v*
+  workflow_dispatch:
+
+concurrency:
+  group: release-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   build-release:
     runs-on: ${{ matrix.platform }}
     strategy:
-      matrix:
-        platform: [windows-latest, macos-latest, ubuntu-22.04, ubuntu-22.04-arm]
       fail-fast: false
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '20.4.x'
-      # Make sure mac x64 gets the aarch64 toolchain too
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: x86_64-apple-darwin,aarch64-apple-darwin
-        if: matrix.platform == 'macos-latest'
-      # Otherwise just make sure rust is set up
-      - uses: dtolnay/rust-toolchain@stable
-        if: matrix.platform != 'macos-latest'
+      matrix:
+        platform: [windows-latest, ubuntu-22.04]
 
-      - name: install dependencies (ubuntu only)
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20.4.x"
+          cache: "yarn"
+
+      # Linux deps for Tauri
+      - name: Install Linux build deps
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
-      - name: install dependencies (ubuntu-arm only)
-        if: matrix.platform == 'ubuntu-22.04-arm'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+          sudo apt-get install -y \
+            libgtk-3-dev libwebkit2gtk-4.0-dev \
+            libappindicator3-dev librsvg2-dev patchelf
 
-      - name: Install dependencies
+      # Windows deps for Tauri installer
+      - name: Install Windows build deps
+        if: matrix.platform == 'windows-latest'
+        run: choco install nsis -y
+
+      # Rust for Tauri backend
+      - uses: dtolnay/rust-toolchain@stable
+
+      - name: Install JS deps
         run: yarn --immutable
-      - name: Build Rivet
+
+      - name: Build workspace
         run: yarn build
         env:
           NODE_OPTIONS: --max-old-space-size=6000
+
+      # Build the desktop app
+      # - On tag refs (app-v*), this will also create/update a GitHub Release and upload assets
+      # - On normal runs, it just builds the app; we upload artifacts in the next step
       - name: Build Tauri App
+        id: tauri
         uses: tauri-apps/tauri-action@v0
         with:
           projectPath: packages/app
@@ -52,18 +64,20 @@ jobs:
           tagName: app-v__VERSION__
           releaseName: 'Rivet IDE v__VERSION__'
           releaseBody: 'See the assets to download this version and install.'
-          releaseDraft: true
+          releaseDraft: ${{ startsWith(github.ref, 'refs/tags/app-v') }}
           prerelease: false
           updaterJsonKeepUniversal: true
-          args: --verbose ${{ matrix.platform == 'macos-latest' && ' --target universal-apple-darwin' || '' }}
+          args: --verbose
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-          APPLE_SIGNING_IDENTITY: ${{ secrets.APPLE_SIGNING_IDENTITY }}
-          APPLE_ID: ${{ secrets.APPLE_ID }}
-          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
-          APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
-          APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
           NODE_OPTIONS: --max-old-space-size=6000
+
+      # Always upload the built bundles as run artifacts (handy for main & manual runs).
+      # Tauri bundles end up under packages/app/src-tauri/target/**/bundle/
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: rivet-tauri-${{ matrix.platform }}
+          path: |
+            packages/app/src-tauri/target/**/bundle/**/*
+          if-no-files-found: warn
