--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,8 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build-release:
+  build:
+    name: Build (${{ matrix.platform }})
     runs-on: ${{ matrix.platform }}
     strategy:
       fail-fast: false
@@ -27,7 +28,6 @@ jobs:
           node-version: "20.4.x"
           cache: "yarn"
 
-      # Linux GUI build deps for Tauri (still required even for portable "app" target)
       - name: Install Linux build deps
         if: matrix.platform == 'ubuntu-22.04'
         run: |
@@ -36,11 +36,7 @@ jobs:
             libgtk-3-dev libwebkit2gtk-4.0-dev \
             libappindicator3-dev librsvg2-dev patchelf
 
-      # Rust toolchain for Tauri backend
       - uses: dtolnay/rust-toolchain@stable
-
-      # If you use Yarn Berry and Corepack, uncomment:
-      # - run: corepack enable
 
       - name: Install JS deps
         run: yarn --immutable
@@ -50,14 +46,11 @@ jobs:
         env:
           NODE_OPTIONS: --max-old-space-size=6000
 
-      # Build Tauri app as **portable executables** and **disable updater**
       - name: Build Tauri App (portable, no updater)
-        id: tauri
         uses: tauri-apps/tauri-action@v0
         with:
           projectPath: packages/app
           tauriScript: yarn tauri
-          # Force portable binaries and disable updater (no keys needed)
           args: >-
             --verbose
             --config '{ "tauri": { "updater": { "active": false }, "bundle": { "targets": ["app"] } } }'
@@ -65,18 +58,73 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_OPTIONS: --max-old-space-size=6000
 
-      # Upload the raw executables from target/**/release (works for both OSes)
-      - name: Upload portable artifacts
+      # Stage binaries with clean names so the release looks nice
+      - name: Stage artifacts
+        shell: bash
+        run: |
+          set -eu
+          STAGE="dist/${{ matrix.platform }}"
+          mkdir -p "$STAGE"
+          # copy any built executables (Windows .exe, Linux ELF)
+          shopt -s nullglob
+          cp -v packages/app/src-tauri/target/**/release/*.exe "$STAGE/" 2>/dev/null || true
+          # Linux binaries (no extension)
+          for f in packages/app/src-tauri/target/**/release/*; do
+            if [ -f "$f" ] && [[ "$f" != *.dSYM ]] && [[ "$f" != *.a ]] && [[ "$f" != *.lib ]] && [[ "$f" != *.rlib ]] && [[ "$f" != *.pdb ]]; then
+              cp -v "$f" "$STAGE/" || true
+            fi
+          done
+          # Tar/zip per platform for single-click download
+          if [[ "${{ matrix.platform }}" == "windows-latest" ]]; then
+            (cd dist && powershell -NoProfile -Command "Compress-Archive -Force '${{ matrix.platform }}' 'rivet-${{ matrix.platform }}.zip'")
+          else
+            (cd dist && tar -czf "rivet-${{ matrix.platform }}.tar.gz" "${{ matrix.platform }}")
+          fi
+
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: rivet-tauri-${{ matrix.platform }}-portable
+          name: rivet-${{ matrix.platform }}
           path: |
-            packages/app/src-tauri/target/**/release/*.exe
-            packages/app/src-tauri/target/**/release/*
+            dist/rivet-${{ matrix.platform }}.zip
+            dist/rivet-${{ matrix.platform }}.tar.gz
           if-no-files-found: warn
+          retention-days: 30
 
-      # On tag builds (e.g., app-v1.2.3), create a GitHub Release and attach the same artifacts
-      - name: Publish GitHub Release (attach portable binaries)
+  publish:
+    name: Publish release assets
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: _artifacts
+
+      - name: List gathered files
+        run: |
+          echo "Collected files:"
+          find _artifacts -type f -maxdepth 3 -print
+
+      # Create/Update Nightly prerelease on non-tag runs
+      - name: Publish Nightly prerelease
+        if: ${{ !startsWith(github.ref, 'refs/tags/app-v') }}
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: nightly
+          name: Nightly
+          prerelease: true
+          draft: false
+          fail_on_unmatched_files: false
+          generate_release_notes: false
+          files: |
+            _artifacts/**/rivet-windows-latest.zip
+            _artifacts/**/rivet-ubuntu-22.04.tar.gz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Create Draft release on real tags and attach assets
+      - name: Publish versioned release (draft)
         if: startsWith(github.ref, 'refs/tags/app-v')
         uses: softprops/action-gh-release@v2
         with:
@@ -85,7 +133,7 @@ jobs:
           body: |
             Portable builds (no installer). Download the asset for your platform.
           files: |
-            packages/app/src-tauri/target/**/release/*.exe
-            packages/app/src-tauri/target/**/release/*
+            _artifacts/**/rivet-windows-latest.zip
+            _artifacts/**/rivet-ubuntu-22.04.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
