--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
           node-version: "20.4.x"
           cache: "yarn"
 
+      # Linux GUI deps required by Tauri even for portable "app" target
       - name: Install Linux build deps
         if: matrix.platform == 'ubuntu-22.04'
         run: |
@@ -38,6 +39,9 @@ jobs:
 
       - uses: dtolnay/rust-toolchain@stable
 
+      # If you use Yarn Berry and Corepack, you can enable it:
+      # - run: corepack enable
+
       - name: Install JS deps
         run: yarn --immutable
 
@@ -46,49 +50,29 @@ jobs:
         env:
           NODE_OPTIONS: --max-old-space-size=6000
 
+      # Build ONLY portable executables and DISABLE updater (no signing keys needed)
       - name: Build Tauri App (portable, no updater)
+        id: tauri
         uses: tauri-apps/tauri-action@v0
         with:
           projectPath: packages/app
           tauriScript: yarn tauri
+          # IMPORTANT: no extra "build" token here; the action runs `tauri build` already.
+          # Compact JSON to avoid quoting issues.
           args: >-
             --verbose
-            --config '{ "tauri": { "updater": { "active": false }, "bundle": { "targets": ["app"] } } }'
+            --config {"tauri":{"updater":{"active":false},"bundle":{"targets":["app"]}}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_OPTIONS: --max-old-space-size=6000
 
-      # Stage binaries with clean names so the release looks nice
-      - name: Stage artifacts
-        shell: bash
-        run: |
-          set -eu
-          STAGE="dist/${{ matrix.platform }}"
-          mkdir -p "$STAGE"
-          # copy any built executables (Windows .exe, Linux ELF)
-          shopt -s nullglob
-          cp -v packages/app/src-tauri/target/**/release/*.exe "$STAGE/" 2>/dev/null || true
-          # Linux binaries (no extension)
-          for f in packages/app/src-tauri/target/**/release/*; do
-            if [ -f "$f" ] && [[ "$f" != *.dSYM ]] && [[ "$f" != *.a ]] && [[ "$f" != *.lib ]] && [[ "$f" != *.rlib ]] && [[ "$f" != *.pdb ]]; then
-              cp -v "$f" "$STAGE/" || true
-            fi
-          done
-          # Tar/zip per platform for single-click download
-          if [[ "${{ matrix.platform }}" == "windows-latest" ]]; then
-            (cd dist && powershell -NoProfile -Command "Compress-Archive -Force '${{ matrix.platform }}' 'rivet-${{ matrix.platform }}.zip'")
-          else
-            (cd dist && tar -czf "rivet-${{ matrix.platform }}.tar.gz" "${{ matrix.platform }}")
-          fi
-
-      - name: Upload build artifacts
+      # Upload exactly what Tauri produced (uses action's artifactPaths output)
+      - name: Upload build artifacts (portable)
         uses: actions/upload-artifact@v4
         with:
           name: rivet-${{ matrix.platform }}
-          path: |
-            dist/rivet-${{ matrix.platform }}.zip
-            dist/rivet-${{ matrix.platform }}.tar.gz
-          if-no-files-found: warn
+          path: ${{ steps.tauri.outputs.artifactPaths }}
+          if-no-files-found: error
           retention-days: 30
 
   publish:
@@ -104,10 +88,10 @@ jobs:
       - name: List gathered files
         run: |
           echo "Collected files:"
-          find _artifacts -type f -maxdepth 3 -print
+          find _artifacts -type f -maxdepth 5 -print
 
-      # Create/Update Nightly prerelease on non-tag runs
-      - name: Publish Nightly prerelease
+      # Nightly prerelease for main/manual runs (overwrites/updates same tag)
+      - name: Publish Nightly prerelease (portable)
         if: ${{ !startsWith(github.ref, 'refs/tags/app-v') }}
         uses: softprops/action-gh-release@v2
         with:
@@ -117,14 +101,12 @@ jobs:
           draft: false
           fail_on_unmatched_files: false
           generate_release_notes: false
-          files: |
-            _artifacts/**/rivet-windows-latest.zip
-            _artifacts/**/rivet-ubuntu-22.04.tar.gz
+          files: _artifacts/**/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Create Draft release on real tags and attach assets
-      - name: Publish versioned release (draft)
+      # Versioned Draft Release for tags app-v*
+      - name: Publish versioned release (draft, portable)
         if: startsWith(github.ref, 'refs/tags/app-v')
         uses: softprops/action-gh-release@v2
         with:
@@ -132,8 +114,6 @@ jobs:
           name: Rivet IDE ${{ github.ref_name }}
           body: |
             Portable builds (no installer). Download the asset for your platform.
-          files: |
-            _artifacts/**/rivet-windows-latest.zip
-            _artifacts/**/rivet-ubuntu-22.04.tar.gz
+          files: _artifacts/**/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
